使用路由控制页面展示

--- a/src/renderer/src/assets/global.scss
+++ b/src/renderer/src/assets/global.scss
@@ -1,11 +1,12 @@
-html {
+.drag,
+body {
   -webkit-app-region: drag;
+}
+
+.no-drag {
+  -webkit-app-region: no-drag;
 }
 
 body {
   @apply w-screen h-screen bg-gray-400;
-}
-
-textarea {
-  -webkit-app-region: no-drag;
 }
